updated map location to fix the map image being cut off

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -162,11 +162,17 @@ a{
       margin: 0;
       padding: 0;
       height: 100%;
-      width: 100%;
+      /* width: 100%; */
   }
 
   #map-container {
     height: 100%;
     width: 100%;
     position: absolute;
+  }
+
+#map_format {
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
